--- a/second/index.css
+++ b/second/index.css
@@ -1,7 +1,10 @@
 .top{
-    height: 20vh;
+    height: 200px;
+    width: 100%;
     display: inline-block;
-    border:5px,solid;
+    border:solid 5px;
+    margin-bottom: 15px;
+    margin-right: 5px;
 }
 .middle{
     height: 30vh;
@@ -11,27 +14,55 @@
 }
 #purp{
     background: blueviolet;
-    height: 50px;
-    width: 10px;
+    height: 110px;
+    width: 35px;
+    display: inline-block;
+    margin: 10px;
+    margin-top:25px;
 }
 #green{
-    background: lawngreen
-
+    background: green;
+    height: 150px;
+    width: 300px;
+    display: inline-block;
+    margin: 10px;
+    margin-top: 25px;
 }
 #blue{
     background: skyblue;
     border-radius: 50%;
-    height: 100px;
-    width: 100px;
-
+    height: 150px;
+    width: 150px;
+    display: inline-block;
+    margin: 10px;
+    margin-top: 25px;
+}
+.dots{
+    border: dotted 4px;
+    height: 150px;
+}
+#yellow{
+    background:lemonchiffon;
+    width: 95%;
+    height: 80%;
+    margin: auto;
+    margin-top: 15px;
+    box-shadow: 5px 5px  gray;
 }
 #box{
-    border: solid;
-    box-shadow: 5px 5px;
+    border: solid 1px gainsboro;
+    box-shadow: 2px 2px gainsboro;
+    width: 400px;
+    height: 200px;
+    margin: auto;
+}
+#words {
+    height: 100px;
+    margin-top: 65px;
 }
 h1{
     color: darkblue;
     text-align: center;
     letter-spacing: 10px;
-    height: 50px;
+    height: 10px;
 }
